<resources>
    <string name="app_name">Kalkulator BMI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="definisi_BMI">BMI atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau
        tidak. Cobalah sekarang!
    </string>
    <string name="tv_BB">Berat Badan (kg)</string>
    <string name="tv_TB">Tinggi Badan (cm)</string>
    <string name="tv_JK">Jenis Kelamin</string>
    <string name="jk_pria">Pria</string>
    <string name="jk_wanita">Wanita</string>
    <string name="btn_hitung">HITUNG</string>
    <string name="hasil_bmi">Nilai BMI:</string>
    <string name="hasil_bmi2">IDEAL</string>
    <string name="lihat_saran">LIHAT SARAN</string>
    <string name="bagikan">BAGIKAN</string>
    <string name="nim">6706184009</string>
    <string name="nama">Melania Indah Safitri</string>
    <string name="kelas">D3IF-42-02</string>
    <string name="about_me">About Me</string>
    <string name="def_mengatasi_kekurusan">Cobalah untuk makan porsi besar, seperti burger berukuran raksasa ini.
    </string>
    <string name="def_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakan gaya karena itu berbahaya</string>
    <string name="def_kegemukan">Cobalah untuk olahraga lari. Kemanapun boleh, asal tidak lari dari kehidupan</string>
    <string name="def_BMI">BMI atau Body Mass Index merupakan cara untuk menetukan apakah berat badanmu ideal atau
        tidak. Cobalah sekarang!
    </string>
    <string name="berat_badan_kg">Berat Badan (kg)</string>
    <string name="tinggi_badan_cm">Tinggi Badan (cm)</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hitung">HITUNG</string>
    <string name="nilai_bmi">Nilai BMI:</string>
    <string name="angka_bmi">angka_bmi</string>
    <string name="lihat_saran_hasil">LIHAT SARAN</string>
    <string name="bagikanhasil">BAGIKAN</string>
    <string name="desk_bmi">IDEAL</string>
</resources>
