<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"/>
        </ScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:layout_editor_absoluteY="28dp"
                tools:layout_editor_absoluteX="-162dp">

            <TextView
                    android:text="@string/def_BMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <TextView
                    android:text="@string/berat_badan_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="36dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/textView8"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="36dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintHorizontal_bias="0.6"/>
            <TextView
                    android:text="@string/tinggi_badan_cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="238dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/textView9" tools:ignore="MissingConstraints"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText2" app:layout_constraintStart_toEndOf="@+id/textView9"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.52"/>
            <TextView
                    android:text="@string/jenis_kelamin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="318dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/textView10"
                    tools:ignore="MissingConstraints"/>
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:id="@+id/radioGroup" android:orientation="vertical">
                <RadioButton
                        android:text="@string/pria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/radioButton4" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/wanita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/radioButton3" android:layout_weight="1"/>
            </RadioGroup>
            <Button
                    android:text="@string/hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button" android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>
            <TextView
                    android:text="@string/nilai_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11" app:layout_constraintEnd_toStartOf="@+id/textView12"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView13"/>
            <TextView
                    android:text="@string/angka_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="100dp" android:layout_marginRight="100dp"/>
            <TextView
                    android:text="@string/desk_bmi"
                    android:layout_width="155dp"
                    android:layout_height="58dp"
                    tools:layout_editor_absoluteX="128dp" android:id="@+id/textView13"
                    android:layout_marginBottom="52dp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_saran" tools:ignore="MissingConstraints"/>
            <Button
                    android:text="@string/lihat_saran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="620dp"
                    tools:layout_editor_absoluteX="34dp" android:id="@+id/btn_saran" tools:ignore="MissingConstraints"/>
            <Button
                    android:text="@string/bagikan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="620dp"
                    tools:layout_editor_absoluteX="249dp" android:id="@+id/button3" tools:ignore="MissingConstraints"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
