<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"/>
        </ScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/definisi_BMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/definisi_BMI"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <TextView
                    android:text="@string/tv_BB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_BB" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/definisi_BMI" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginBottom="72dp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_TB"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/input_BB" app:layout_constraintStart_toEndOf="@+id/tv_BB"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintTop_toBottomOf="@+id/definisi_BMI"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/tv_TB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_TB"
                    app:layout_constraintTop_toBottomOf="@+id/tv_BB" android:layout_marginTop="40dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp" android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/input_TB" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/tv_TB" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/input_BB" app:layout_constraintHorizontal_bias="0.38"/>
            <TextView
                    android:text="@string/tv_JK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_JK" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="52dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_TB"/>
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteY="271dp"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:orientation="horizontal"
                    app:layout_constraintStart_toEndOf="@+id/tv_JK" android:id="@+id/radioGroup"
                    tools:ignore="MissingConstraints">
                <RadioButton
                        android:text="@string/jk_pria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/radioButton" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/jk_wanita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/radioButton2" android:layout_weight="1"/>
            </RadioGroup>
            <Button
                    android:text="@string/btn_hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_hitung" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
